--- a/css/main.css
+++ b/css/main.css
@@ -47,3 +47,33 @@ table {
 	border-spacing: 0;
 }
 /* End reset here */
+
+/* Overall basic font setting  */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: bold;
+    font-family: 'Sawarabi Gothic', sans-serif;
+}
+
+h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h3 {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+/* End of basic setting */
+
+.wrapper {
+    margin: 0 auto;
+    padding: 0 10px;
+}
