--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ picture img, picture source {
 header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 
 nav ul {
@@ -637,4 +637,10 @@ a[href="https://unsplash.com/"] {
 
 .faq > p a {
     color: var(--link-color);
+}
+
+/* add margin to the skip content link */
+a[href="#maincontent"] {
+    display: inline-block;
+    margin-bottom: 20px;
 }
