--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ header {
 
 nav ul {
     border: 1px solid black;
+    background-color: white;
 }
 
 nav ul li {
@@ -174,11 +175,16 @@ nav {
     max-height: 0;
     overflow: hidden;
     padding: 0 0 0 50px;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    z-index: 10;
 }
 
 /* when click shows the menu */
 input:checked ~ nav {
     max-height: 100%;
+    overflow: visible;
 }
 
 /* Style the header to fit the screen size */
